--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"bcrypt": "^5.1.0",
+		"bcryptjs": "^2.4.3",
 		"color": "^4.2.3",
 		"colors": "^1.4.0",
 		"cookie": "^0.5.0",
